# pallet-event-feed

./: .gitignore  Cargo.toml  README.md  references.md
consensus/sha3pow/src/: lib.rs
nodes/basic-pow/: Cargo.toml
nodes/basic-pow/src/: chain_spec.rs  command.rs  main.rs  service.rs
nodes/kitchen-node/: Cargo.toml
nodes/kitchen-node/src/: chain_spec.rs  command.rs  main.rs  service.rs
pallets/oracle-event-feed/: Cargo.toml
pallets/oracle-event-feed/src/: lib.rs  tests.rs
pallets/struct-storage/src/: lib.rs  tests.rs
pallets/vec-set/src/: lib.rs  tests.rs
runtimes/super-runtime/: Cargo.toml  aggregate_types.js
runtimes/super-runtime/src/: genesis.rs  lib.rs
