[package]
name = "oracle-event-feed"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "2.0", features = ["derive"], default-features = false }

# Substrate packages
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
account-set = { path = '../../traits/account-set', default-features = false }
vec-set = { path = '../vec-set', default-features = false }

[dev-dependencies]
sp-core = '3.0'
sp-io = '3.0'
serde = '1.0'

[features]
default = ['std']
std = [
	'account-set/std',
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-runtime/std',
	'vec-set/std',
]
